--- a/test1.html
+++ b/test1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tes Web</title>
+        <title>Tes1 Web</title>
         <style>
             div {
                 background-color: lightblue;
